# scraping_deep_web

./: Makefile  README.md  pyproject.toml  test_tor.py
tor_links/: scrapy.cfg
tor_links/tor_links/: items.py  middlewares.py  pipelines.py  settings.py
tor_links/tor_links/spiders/: link_list.py
