[tool.poetry]
name = "scraping-deep-web"
version = "0.1.0"
description = ""
authors = ["jorgepvasconcelos <jorge.r.p.v@hotmail.com>"]
readme = "README.md"
packages = [{include = "scraping_deep_web"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.8.0"
pysocks = "^1.7.1"
pproxy = "^2.7.8"
elasticsearch = "7.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
